# telegram_crypto_price_bot

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  mypy.ini  prospector.yaml  pyproject.toml  pyproject_legacy.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  code-analysis.yml
app/: bot.py  bot_start.py
app/conf/: config.ini
app/lang/: lang_it.xml
telegram_crypto_price_bot/: __init__.py  _version.py  bot_base.py  chart_info.py  chart_info_file_saver.py  chart_info_message_sender.py  chart_price_info_message_sender.py  chat_members.py  coin_info_job.py  coin_info_message_sender.py  coin_info_scheduler.py  coin_info_tasks.py  coingecko_price_api.py  command_base.py  command_data.py  command_dispatcher.py  commands.py  config.py  config_data.py  config_loader.py  formatters.py  helpers.py  info_message_sender_base.py  logger.py  message_deleter.py  message_dispatcher.py  message_sender.py  price_bot.py  price_bot_config_cfg.py  price_bot_handlers_cfg.py  price_info.py  price_info_builder.py  price_info_message_sender.py  translation_loader.py  utils.py  wrapped_list.py
telegram_crypto_price_bot/bot/: bot_base.py  bot_config.py  bot_config_cfg.py  bot_config_types.py  bot_handlers_cfg.py  bot_handlers_config.py  bot_handlers_config_typing.py
telegram_crypto_price_bot/chart_info/: chart_info.py  chart_info_file_saver.py
telegram_crypto_price_bot/coin_info/: coin_info_job.py  coin_info_scheduler.py
telegram_crypto_price_bot/coingecko/: coingecko_price_api.py
telegram_crypto_price_bot/command/: command_base.py  command_data.py  command_dispatcher.py  commands.py
telegram_crypto_price_bot/config/: config_file_sections_loader.py  config_loader.py  config_loader_ex.py  config_object.py  config_section_loader.py  config_sections_loader.py  config_typing.py  configurable_object.py
telegram_crypto_price_bot/info_message_sender/: chart_info_message_sender.py  chart_price_info_message_sender.py  coin_info_message_sender.py  (+2 more)
(+14 files in other folders)
