[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram_crypto_price_bot"
dynamic = ["version", "dependencies"]
authors = [
    {name = "Emanuele Bellocchia", email = "ebellocchia@gmail.com"}
]
maintainers = [
    {name = "Emanuele Bellocchia", email = "ebellocchia@gmail.com"}
]
description = "Telegram bot for displaying cryptocurrencies price"
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.7"
keywords = [
    "telegram",
    "bot",
    "telegram bot",
    "crypto",
    "crypto prices",
    "cryptocurrency",
    "cryptocurrency prices"
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/ebellocchia/telegram_crypto_price_bot"
Changelog = "https://github.com/ebellocchia/telegram_crypto_price_bot/blob/master/CHANGELOG.md"
Repository = "https://github.com/ebellocchia/telegram_crypto_price_bot"
Download = "https://github.com/ebellocchia/telegram_crypto_price_bot/archive/v{version}.tar.gz"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
telegram_crypto_price_bot = ["lang/lang_en.xml"]

[tool.setuptools.dynamic]
version = {attr = "telegram_crypto_price_bot._version.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.develop = {file = ["requirements-dev.txt"]}

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "\\.github",
    "\\.eggs",
    "\\.egg-info",
    "\\.tox",
    "build",
    "venv",
]
